Act 23jun class

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -105,56 +105,63 @@
         <section class="features">
             <article class="publish">
                 <div class="publish_part1">
-                    <img src="./img/icon_publish.png" alt="icon_publish" class="icon_publish">
+                    <img src="./img/icon_publish.png" alt="icon_publish" class="icon_publish" />
                     <h3>Fill your blog with engaging articles.</h3>
-                    <p>Publish to your blog in less time than it takes to drink your morning coffee.</p>
+                    <p>
+                        Publish to your blog in less time than it takes to drink your morning coffee.
+                    </p>
                     <a href="">Publish instantly →</a>
                 </div>
                 <figure class="publish_part2">
-                    <img src="./img/image_publish.png" alt="image_publish" class="image_publish">
+                    <img src="./img/image_publish.png" alt="image_publish" class="image_publish" />
                 </figure>
             </article>
 
             <article class="publish">
                 <div class="publish_part1">
-                    <img src="./img/icon_site_traffic.png" alt="site_traffic" class="icon_publish">
+                    <img src="./img/icon_site_traffic.png" alt="site_traffic" class="icon_publish" />
                     <h3>Attract and engage more website visitors.</h3>
-                    <p>Enhance your email, social media channels, and paid ads with content from Matcha.</p>
+                    <p>
+                        Enhance your email, social media channels, and paid ads with content from Matcha.
+                    </p>
                     <a href="">Get more site traffic →</a>
                 </div>
                 <figure class="publish_part2">
-                    <img src="./img/image_site_traffic.png" alt="img_site_traffic" class="image_publish">
+                    <img src="./img/image_site_traffic.png" alt="img_site_traffic" class="image_publish" />
                 </figure>
             </article>
 
             <article class="publish">
                 <div class="publish_part1">
-                    <img src="./img/icon_capture.png" class="icon_publish">
+                    <img src="./img/icon_capture.png" class="icon_publish" />
                     <h3>Capture more emails with locked content.</h3>
-                    <p>Convert 10x more of your traffic into subscribers and nurture them to a sale.</p>
+                    <p>
+                        Convert 10x more of your traffic into subscribers and nurture them to a sale.
+                    </p>
                     <a href="">Grow your email list faster →</a>
                 </div>
                 <figure class="publish_part2">
-                    <img src="./img/image_capture.png" alt="img_site_traffic" class="image_publish">
+                    <img src="./img/image_capture.png" alt="img_site_traffic" class="image_publish" />
                 </figure>
             </article>
 
             <article class="publish">
                 <div class="publish_part1">
-                    <img src="./img/image_roi.png" class="icon_publish">
+                    <img src="./img/image_roi.png" class="icon_publish" />
                     <h3>Optimize your blog’s performance.</h3>
-                    <p>See what content delivers the most traffic, engagement, email subscribers, and sales.</p>
+                    <p>
+                        See what content delivers the most traffic, engagement, email subscribers, and sales.
+                    </p>
                     <a href="">See content’s ROI →</a>
                 </div>
                 <figure class="publish_part2">
-                    <img src="./img/image_roi.png" class="image_publish ">
+                    <img src="./img/image_roi.png" class="image_publish" />
                 </figure>
             </article>
-
         </section>
 
-        <section class="clients ">
-            <div class="blogs ">
+        <section class="clients">
+            <div class="blogs">
                 <h2>Growing ecommerce</h2>
                 <h2>brands rely on Matcha.</h2>
                 <p>
@@ -164,18 +171,67 @@
                 <img src="./img/brands_group.png " width="100% " />
             </div>
 
-            <div class="case_study ">
+            <div class="case_study">
                 <img src="./img/profile-headshot-square.png " width="250px " />
                 <h5>Everly</h5>
                 <p>
                     Early-Stage CPG Brand Increases Lead Conversion 20x, Ecommerce Revenue 20%
                 </p>
 
-                <div class="goals ">
+                <div class="goals">
                     <img src="./img/icon_cart.png " width="10% " height="10% " />
                     <p>22% of monthly revenue influenced by content</p>
                 </div>
                 <button>See Case study</button>
+            </div>
+        </section>
+
+        <section class="platform">
+            <div class="platform_part1">
+                <h2>How does Matcha wok?</h2>
+                <p>
+                    Your blog can be so much more than window dressing. Use Matcha’s
+                    <span>simple formula</span> to transform your blog into an ecommerce growth engine.
+                </p>
+                <button>Explore the Platform</button>
+            </div>
+
+            <div class="platform_part2">
+                <article>
+                    <img src="./img/ill-publish.png" />
+                    <h3>Publish</h3>
+                    <p>
+                        Effortlessly fill your blog with content that shoppers want to read.
+                    </p>
+                    <a>Publish instantly →</a>
+                </article>
+
+                <article>
+                    <img src="./img/ill-promote.png" />
+                    <h3>Promote</h3>
+                    <p>
+                        Use articles in email, social, and content ads to attract more site visitors.
+                    </p>
+                    <a>Drrive morer site visitors →</a>
+                </article>
+
+                <article>
+                    <img src="./img/ill-capture.png" />
+                    <h3>Capture</h3>
+                    <p>
+                        Turn readers into email subscribers and subscribers into customers.
+                    </p>
+                    <a>Grow your email list →</a>
+                </article>
+
+                <article>
+                    <img src="./img/ill-measure.png" />
+                    <h3>Measure</h3>
+                    <p>
+                        See what’s working and what’s not to easily optimize for more traffic, email subscribers, and sales.
+                    </p>
+                    <a>Track performance →</a>
+                </article>
             </div>
         </section>
 
