--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <meta property="og:image"
     content="https://media.vogue.es/photos/5ff05e472361f90ef2d5d967/master/pass/HP_TOTORO_Registration_2880x1620.jpg" />
   <meta property="og:description" content="Matcha Bedú M1" />
+
+  <link rel="shortcut icon" type="image/jpg" href="img/favicon.png"/>
 </head>
 
 <body>
